# solarance

./: .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  TASKS.md
agents/: README.md
agents/reports/: 2026-07-10-comprehensive-analysis.md  client-architecture-review-2026-05-17.html  milestones.html
client/: Cargo.toml
client-admin/: Cargo.toml
client-admin/src/: app.rs
client/assets/: LICENSE.txt
client/src/: gameplay.rs  login.rs  main.rs
client/src/gameplay/: gui.rs  player.rs  render.rs  resources.rs  state.rs  visual_effects.rs
client/src/gameplay/gui/: asset_utils.rs  chat_widget.rs  construction_window.rs  creation_window.rs  debug_widget.rs  map_window.rs  menu_bar_widget.rs  out_of_play_screen.rs  settings_window.rs  ship_details_window.rs  status_widget.rs  welcome_back_widget.rs
client/src/gameplay/gui/out_of_play_screen/: utils.rs
client/src/gameplay/render/: in_sector.rs  star_system.rs
client/src/stdb/: connector.rs
client/src/stdb/connector/: subscriptions.rs
docs/: content.jsx
server/: Cargo.toml
server/src/: lib.rs  utility.rs
server/src/admin/: creation.rs
server/src/definitions/: factions.rs  galaxy.rs
server/src/lifecycle/: client_connected.rs  client_disconnected.rs  init.rs
server/src/logic/combat/: visual_effects.rs
server/src/logic/players/: registration.rs
server/src/logic/ships/: creation.rs  mining.rs  station_interactions.rs  status.rs  weapons.rs
server/src/logic/stations/: buy_and_sell.rs  contribution.rs  mod.rs  production.rs  status.rs
server/src/tables/: global_config.rs  items.rs  players.rs
