[package]
name = "solarance_galaxy_creator"
description = "Solarance:Beginnings — privileged Galaxy Creator client for admins/moderators"
homepage = "http://www.solarance-beginnings.com/"
repository = "https://github.com/GalaxyCr8r/solarance-beginnings"
version = "0.6.0"
edition = "2021"
authors = ["J Harrison aka Restful-Otaku"]
rust-version = "1.86.0"

# Privileged "Galaxy Creator" client (issue #34). Admin/moderator-only seed
# tool: create sectors, place construction-site stations, and connect sectors
# with jumpgates against a running module — without re-publishing. Kept as a
# separate binary so it never ships in the player build. Mirrors the macroquad +
# egui + spacetimedb-sdk stack of `../client` so the star-system rendering code
# can eventually be lifted over for previewing new systems/sectors.

[[bin]]
name = "solarance_galaxy_creator"
path = "src/main.rs"

[dependencies]
egui = "0.31.1"
egui-macroquad = "0.17.3"
macroquad = { version = "0.4.14", features = ["backtrace"] }
spacetimedb-sdk = "2.6.0"
