[package]
name = "solarance_beginnings"
description = "A Top-Down 2D Living Universe Sci-Fi Space MMO"
homepage = "http://www.solarance-beginnings.com/"
repository = "https://github.com/GalaxyCr8r/solarance-beginnings"
version = "0.6.0"
edition = "2021"
authors = ["J Harrison aka Restful-Otaku"]
rust-version = "1.86.0"

[dependencies]
async-executor = "1.13.2"
dotenv = "0.15.0"
egui = "0.31.1"
egui-macroquad = "0.17.3"
futures-lite = "2.6.0"
lazy_static = "1.5.0"
macroquad = { version = "0.4.14", features = ["backtrace"] }
open = "5.3.2"
openidconnect = { version = "4.0.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.12.15", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
spacetimedb-sdk = "2.6.0"
url = "2.5.4"
solarance-shared = { path = "../solarance-shared" }

[features]

[package.metadata.rust-analyzer]
# Enable experimental features in rust-analyzer
rustc_private = true
