[package]
name = "solarance-spacetime-module"
description = "A Server for Top-Down 2D Living Universe Sci-Fi Space MMO"
homepage = "http://www.solarance-beginnings.com/"
repository = "https://github.com/GalaxyCr8r/solarance-beginnings"
version = "0.6.0"
edition = "2021"
authors = ["J Harrison aka Restful-Otaku"]

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.6.0" }
spacetimedsl = "0.20.1"
log = "0.4"
glam = "0.30.2"
solarance-shared = { path = "../solarance-shared" }
